Implement event-driven EventLoop architecture and IWindowHost abstraction
This commit implements a proper event-driven architecture for Worker/SharedWorker
APIs following the HTML5 specification, with NO busy-waiting.

## Event Loop Architecture

### EventLoop Interface
- Core abstraction for queuing Runnable tasks
- Methods: queueTask(), start(), stop(), isRunning()

### WorkerThreadEventLoop
- Dedicated thread with BlockingQueue<Runnable>
- Blocks on taskQueue.take() - NO Thread.sleep() loops
- Proper event-driven execution

### MainThreadEventLoop
- Integrates with JavaFX Platform.runLater() or Swing invokeLater()
- Falls back to own thread with BlockingQueue if no UI toolkit
- Automatically detects and uses available UI event loop

## MessagePort Message Buffering

- MessagePort now has messageQueue (LinkedBlockingQueue) from construction
- Messages can be queued IMMEDIATELY, before handlerRuntime is set
- When onmessage is set, drains all pending messages
- Handles race condition where messages arrive before worker initialized

## IWindowHost Abstraction

- Completed IWindowHost interface for AWT/Swing vs JavaFX abstraction
- SwingWindowHost wraps RootPaneContainer
- Document, Node, HTMLCanvasElement, JavaCanvas updated to use IWindowHost
- Proper null checks and instanceof checks for backend-specific code

## Integration

- RhinoRuntime and GraalRuntime create and start EventLoops
- SharedWorker uses WorkerThreadEventLoop
- Main thread uses MainThreadEventLoop
- SharedWorker port auto-starts per HTML5 spec
- Worker thread parks on Object.wait() instead of busy-looping

## Known Issue

Rhino Context thread-locality prevents cross-thread object access.
See WORKER_STATUS.md for details and potential solutions.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>